--- a/hukuki/angular.json
+++ b/hukuki/angular.json
@@ -94,11 +94,13 @@
               "src/assets"
             ],
             "styles": [
-              "../node_modules/bootstrap/dist/css/bootstrap.min.css",
+              
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "../node_modules/jquery/dist/jquery.min.js",
-              "../node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
-              "../node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
+              "node_modules/animate.css/animate.min.css"
             ],
             "scripts": []
           }
