--- a/hukuki/package.json
+++ b/hukuki/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "ngx-owl-carousel-2": "^6.0.10",
@@ -25,7 +26,7 @@
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.4.0",
     "save": "^2.4.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
