--- a/hukuki/package.json
+++ b/hukuki/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.6.0",
     "ngx-owl-carousel-2": "^6.0.10",
     "ngx-owl-carousel-o": "^7.0.2",
+    "nodemailer": "^6.8.0",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.4.0",
     "save": "^2.4.0",
